--- a/estilos/style.css
+++ b/estilos/style.css
@@ -272,6 +272,19 @@ footer a:hover {
 
 
 @media screen and (min-width: 768px) {
+
+  main {
+    grid-template-columns: auto 300px 1fr auto;
+  }
+
+  section#ficha {
+
+  }
+
+  section#detalhes {
+
+  }
+
   #skill-container {
     grid-template-columns: 1fr 1fr;
   }
