modo escuro e claro

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,11 +25,22 @@
 
 }
 
+body.escuro {
+  --fundo-principal: #222222;
+  --texto: #0e0e0e;
+  --texto-inverso: #333333;
+  --destaque: #ff5522;
+  --destaque-inverso: #a73917;
+  --fundo-card: #444444; 
+}
+
 body {
   font-family: Verdana, Tahoma, sans-serif;
   line-height: 1.5em;
   background-color: var(--fundo-principal);
   color: var(--texto);
+
+  transition: background-color 0.5s, color 0.5s;
 }
 
 header {
